--- a/_posts/2020-07-17-blog-post-1.md
+++ b/_posts/2020-07-17-blog-post-1.md
@@ -10,7 +10,7 @@ tags:
 
 Das ist ein Artikel.
 
-[Download paper here](files/uebertrag_1.pdf)
+[Download paper here](https://uwedeportivo.github.io/josef/files/uebertrag_1.pdf)
 
 Headings are cool
 ======
