--- a/_posts/2020-07-17-blog-post-1.md
+++ b/_posts/2020-07-17-blog-post-1.md
@@ -1,14 +1,13 @@
 ---
-title: 'Uebertragung 1'
+title: 'Übertragung 1'
 date: 2020-07-19
 permalink: /posts/2020/07/uebertragung1/
 tags:
-  - cool posts
-  - category1
-  - category2
+  - dsp
+  - filter
 ---
 
-Das ist ein Artikel.
+Untersuchung eines passiven Tiefpassfilters.
 
-[Download paper here](https://uwedeportivo.github.io/josef/files/uebertrag_1.pdf)
+[Download](https://uwedeportivo.github.io/josef/files/uebertrag_1.pdf)
 
